--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     </head>
     <body>
         <div class="container a" id="container1">
-            <h4 class="title">⟪牢大の小曲⟫</h4>
-            <h2 class="title">⟪牢大の小曲⟫</h2>
-            <h3 class="title">⟪牢大の小曲⟫</h3>
-            <h1 class="title">⟪牢大の小曲⟫</h1>
-            <h2 class="title">⟪牢大の小曲⟫</h2>
-            <h3 class="title">⟪牢大の小曲⟫</h3>
+            <h4 class="title">⟪AUTOMOTIVO BAYSIDE⟫</h4>
+            <h2 class="title">⟪AUTOMOTIVO BAYSIDE⟫</h2>
+            <h3 class="title">⟪AUTOMOTIVO BAYSIDE⟫</h3>
+            <h1 class="title">⟪AUTOMOTIVO BAYSIDE⟫</h1>
+            <h2 class="title">⟪AUTOMOTIVO BAYSIDE⟫</h2>
+            <h3 class="title">⟪AUTOMOTIVO BAYSIDE⟫</h3>
         </div>
         <div class="container b" id="container2" onclick="showCanvas()">
             <h4 class="title">⟪ONCE UPON A TIME⟫</h4>
