--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Hi</title>
+        <link rel="icon" href="/网站图标.png" type="image/png">
+        <title>Soul-Echoes</title>
         <link rel="stylesheet" href="./CSS/style.css">
         <script src="https://cdn.jsdelivr.net/npm/@dlom/favicon@1.0.6/dist/favicon.min.js"></script>
         <style>
@@ -52,7 +53,7 @@
         <div class="container NO">
             <h1>   </h1>
         </div>
-        <div class="g"><h1>未做</h1></div>
+
         <!-- 注意：移除了错误的文件名 "text Image.js"，因为它可能是一个错误 -->
 
         <!-- 移除了空的 <div class="x"></div> -->
