--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
             <h1>   </h1>
         </div>
 
+        
+        <canvas class="fullscreen-canvas YES"></canvas>
+
         <!-- 注意：移除了错误的文件名 "text Image.js"，因为它可能是一个错误 -->
 
         <!-- 移除了空的 <div class="x"></div> -->
