音频可视化

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="./CSS/style.css">
         <script src="https://cdn.jsdelivr.net/npm/@dlom/favicon@1.0.6/dist/favicon.min.js"></script>
         <style>
+            
             /* 应用到特定容器内的所有h4, h2, h3, h1标签的文本 */
             .container h4, .container h2, .container h3, .container h1 {
                 user-select: none; /* 不允许文本选择 */
@@ -55,6 +56,10 @@
         </div>
 
         
+        <canvas class="fullscreen-canvas YES"></canvas>
+
+
+        <div class="fullscreen-background"></div>
         <canvas class="fullscreen-canvas YES"></canvas>
 
         <!-- 注意：移除了错误的文件名 "text Image.js"，因为它可能是一个错误 -->
