--- a/还没做.html
+++ b/还没做.html
@@ -1,42 +1,22 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="zh-CN">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>敬请期待</title>
-  <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<script src="particles.min.js"></script>
-
-<link rel="stylesheet" href="./style.css">
-<style>
-  canvas{
-    margin: 0;
-    padding: 0;
-    background-color: dark;
-  }
-</style>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+  <link rel="stylesheet" href="./style.css">
+  <style>
+    body, html { margin: 0; padding: 0; height: 100%; overflow: hidden; background: #000; }
+    canvas { position: absolute; top: 0; left: 0; }
+    h1 { color: aliceblue; line-height: 100vh; text-align: center; font-size: 100px; margin: 0; }
+  </style>
 </head>
-<!-- partial:index.partial.html -->
 <body>
   <canvas class="background"></canvas>
-
-  <script src='jquery.min.js'></script>
-  <script  src="./script.js"></script>
-
+  <h1 class="animate__animated animate__zoomInDown">敬请期待</h1>
+  <script src="particles.min.js"></script>
+  <script src="jquery.min.js"></script>
+  <script src="./script.js"></script>
 </body>
 </html>
-<link
-rel="stylesheet"
-href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-/>
-<title>敬请期待</title>
-
-<h1 style="
-color: aliceblue;
-line-height: 815px;
-text-align: center;
-font-size: 100px;" class="animate__animated animate__zoomInDown">敬请期待</h1>
-
-
-
- 
