--- a/index.html
+++ b/index.html
@@ -5,16 +5,9 @@
         <title>Soul-Echoes</title>
         <link rel="stylesheet" href="./CSS/style.css">
         <script src="https://cdn.jsdelivr.net/npm/@dlom/favicon@1.0.6/dist/favicon.min.js"></script>
-        <style>
-            
-            /* 应用到特定容器内的所有h4, h2, h3, h1标签的文本 */
-            .container h4, .container h2, .container h3, .container h1 {
-                user-select: none; /* 不允许文本选择 */
-            }
-        </style>
     </head>
     <body>
-        <div class="container a" id="container1">
+        <div class="container a abcdef" id="container1">
             <h4 class="title">⟪AUTOMOTIVO BAYSIDE⟫</h4>
             <h2 class="title">⟪AUTOMOTIVO BAYSIDE⟫</h2>
             <h3 class="title">⟪AUTOMOTIVO BAYSIDE⟫</h3>
@@ -55,12 +48,5 @@
             <h1>   </h1>
         </div>
 
-
-
-
-        <!-- 注意：移除了错误的文件名 "text Image.js"，因为它可能是一个错误 -->
-
-        <!-- 移除了空的 <div class="x"></div> -->
-
-    </body>
+        </body>
 </html>
