--- a/index.html
+++ b/index.html
@@ -48,6 +48,14 @@
             <h2 class="title">⟪ROMANCE GARBAGE⟫</h4>
             <h3 class="title">⟪ROMANCE GARBAGE⟫</h4>
         </div>
+        <div class="container f" id="container6">
+            <h4 class="title">⟪I BELIEVE⟫</h4>
+            <h2 class="title">⟪I BELIEVE⟫</h4>
+            <h3 class="title">⟪I BELIEVE⟫</h4>
+            <h1 class="title">⟪I BELIEVE⟫</h4>
+            <h2 class="title">⟪I BELIEVE⟫</h4>
+            <h3 class="title">⟪I BELIEVE⟫</h4>
+        </div>
 
         <div id="audioVisualizationContainer">
             <canvas id="audioVisualization" width="100%" height="100px"></canvas>
@@ -62,6 +70,9 @@
         <script src="JS/index.min.js"></script>
         <script src="JS/cat.js"></script>
         <div class="container NO">
+            <h1>   </h1>
+        </div>
+        <div class="container NOV">
             <h1>   </h1>
         </div>
 
