--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         
     </head>
     <body>
-        <div class="container a abcdef" id="container1"class="shake-element">
+        <div class="container a abcdef" id="container1">
             <h4 class="title">⟪AUTOMOTIVO BAYSIDE⟫</h4>
             <h2 class="title">⟪AUTOMOTIVO BAYSIDE⟫</h2>
             <h3 class="title">⟪AUTOMOTIVO BAYSIDE⟫</h3>
@@ -17,7 +17,7 @@
             <h2 class="title">⟪AUTOMOTIVO BAYSIDE⟫</h2>
             <h3 class="title">⟪AUTOMOTIVO BAYSIDE⟫</h3>
         </div>
-        <div class="container b" id="container2" onclick="showCanvas()"class="shake-element">
+        <div class="container b" id="container2" onclick="showCanvas()">
             <h4 class="title">⟪ONCE UPON A TIME⟫</h4>
             <h2 class="title">⟪ONCE UPON A TIME⟫</h2>
             <h3 class="title">⟪ONCE UPON A TIME⟫</h3>
@@ -25,7 +25,7 @@
             <h2 class="title">⟪ONCE UPON A TIME⟫</h2>
             <h3 class="title">⟪ONCE UPON A TIME⟫</h3>
         </div>
-        <div class="container c" id="container3"class="shake-element">
+        <div class="container c" id="container3">
             <h4 class="title">⟪AUTOMOTIVO BAYSIDE 2.0⟫</h4>
             <h2 class="title">⟪AUTOMOTIVO BAYSIDE 2.0⟫</h4>
             <h3 class="title">⟪AUTOMOTIVO BAYSIDE 2.0⟫</h4>
@@ -33,7 +33,7 @@
             <h2 class="title">⟪AUTOMOTIVO BAYSIDE 2.0⟫</h4>
             <h3 class="title">⟪AUTOMOTIVO BAYSIDE 2.0⟫</h4>
         </div>
-        <div class="container d" id="container4"class="shake-element">
+        <div class="container d" id="container4">
             <h4 class="title">⟪AUTOMOTIVO BAYSIDE 3.0⟫</h4>
             <h2 class="title">⟪AUTOMOTIVO BAYSIDE 3.0⟫</h4>
             <h3 class="title">⟪AUTOMOTIVO BAYSIDE 3.0⟫</h4>
@@ -41,7 +41,7 @@
             <h2 class="title">⟪AUTOMOTIVO BAYSIDE 3.0⟫</h4>
             <h3 class="title">⟪AUTOMOTIVO BAYSIDE 3.0⟫</h4>
         </div>
-        <div class="container e" id="container5"class="shake-element">
+        <div class="container e" id="container5">
             <h4 class="title">⟪ROMANCE GARBAGE⟫</h4>
             <h2 class="title">⟪ROMANCE GARBAGE⟫</h4>
             <h3 class="title">⟪ROMANCE GARBAGE⟫</h4>
@@ -49,7 +49,7 @@
             <h2 class="title">⟪ROMANCE GARBAGE⟫</h4>
             <h3 class="title">⟪ROMANCE GARBAGE⟫</h4>
         </div>
-        <div class="container f" id="container6" class="shake-element">
+        <div class="container f" id="container6" >
             <h4 class="title">⟪I BELIEVE⟫</h4>
             <h2 class="title">⟪I BELIEVE⟫</h4>
             <h3 class="title">⟪I BELIEVE⟫</h4>
@@ -57,6 +57,15 @@
             <h2 class="title">⟪I BELIEVE⟫</h4>
             <h3 class="title">⟪I BELIEVE⟫</h4>
         </div>
+        <div class="container H" id="container7" >
+            <h4 class="title">⟪SWEET RALLY⟫</h4>
+            <h2 class="title">⟪SWEET RALLY⟫</h4>
+            <h3 class="title">⟪SWEET RALLY⟫</h4>
+            <h1 class="title">⟪SWEET RALLY⟫</h4>
+            <h2 class="title">⟪SWEET RALLY⟫</h4>
+            <h3 class="title">⟪SWEET RALLY⟫</h4>
+        </div>
+        
 
         <div id="audioVisualizationContainer">
             <canvas id="audioVisualization" width="100%" height="100px"></canvas>
