--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <h2 class="title">⟪I BELIEVE⟫</h2>
             <h3 class="title">⟪I BELIEVE⟫</h3>
         </div>
-        <div class="container H" id="container7" >
+        <div class="container H"  id="container7" >
             <h4 class="title">⟪SWEET RALLY⟫</h4>
             <h2 class="title">⟪SWEET RALLY⟫</h2>
             <h3 class="title">⟪SWEET RALLY⟫</h3>
@@ -151,6 +151,14 @@
             <h1 class="title">⟪BRODYAGA FUNK⟫</h1>
             <h2 class="title">⟪BRODYAGA FUNK⟫</h2>
             <h3 class="title">⟪BRODYAGA FUNK⟫</h3>
+        </div>
+        <div class="container V" id="container19" >
+            <h4 class="title">⟪SIMPSON WAVE 1995⟫</h4>
+            <h2 class="title">⟪SIMPSON WAVE 1995⟫</h2>
+            <h3 class="title">⟪SIMPSON WAVE 1995⟫</h3>
+            <h1 class="title">⟪SIMPSON WAVE 1995⟫</h1>
+            <h2 class="title">⟪SIMPSON WAVE 1995⟫</h2>
+            <h3 class="title">⟪SIMPSON WAVE 1995⟫</h3>
         </div>
         
         
