--- a/index.html
+++ b/index.html
@@ -11,13 +11,16 @@
     </head>
     <body>
         <div id="introPopup" class="popup">
-            <div class="popup-content">
-                <h2>自我介绍</h2>
-                <p>嗨，我是个喜欢做网页的新手。正在学习中，希望能做出实用又炫酷的网站。</p>
-                <input type="text" id="introInput" placeholder="输入你的自我介绍">
-                <button id="saveIntroButton">保存</button>
-                <button id="closePopup">关闭</button>
-            </div>
+    <div class="popup-content">
+        <h2>自我介绍</h2>
+        <p>嗨，我是个喜欢做网页的新手。正在学习中，希望能做出实用又炫酷的网站。</p>
+        <textarea id="userInput" placeholder="输入你的内容..."></textarea>
+        <button id="saveButton">保存</button>
+        <button id="closePopup">关闭</button>
+        <div id="savedContent"></div>
+    </div>
+</div>
+
         </div>
         <div class="container a abcdef" id="container1">
             <h1 class="title">⟪AUTOMOTIVO BAYSIDE⟫</h1>
