--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <link rel="icon" href="/网站图标.png" type="image/png">
         <title>Soul-Echoes</title>
         <link rel="stylesheet" href="./CSS/style.css">
+        <link rel="preload" href="https://a452163.github.io/CSS/O.ttf" as="font" type="font/ttf" crossorigin>
         
         
 
