--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <link rel="icon" href="/网站图标.png" type="image/png">
-        <title>Soul-Echoes</title>
+        <title>你觉得我该选一个什么样子的标题?</title>
         <link rel="stylesheet" href="./CSS/style.css">
         <link rel="preload" href="https://a452163.github.io/CSS/O.ttf" as="font" type="font/ttf" crossorigin>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
